simplek8s/client-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client-pod
  labels:
    component: web
spec:
  containers:
    - name: client
      image: marscheung/multi-worker
      imagePullPolicy: Never
      ports:
        - containerPort: 3000
