simplek8s/postgres-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres-pod
  labels:
    component: postgres
spec:
  containers:
    - name: postgres
      image: postgres:latest
      ports:
        - containerPort: 5432
