simplek8s/server-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: server-pod
  labels:
    component: server
spec:
  containers:
    - name: server
      image: marscheung/multi-server
      imagePullPolicy: Never
      ports:
        - containerPort: 5000
