simplek8s/worker-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: worker-pod
  labels:
    component: worker
spec:
  containers:
    - name: worker
      image: marscheung/multi-worker
      imagePullPolicy: Never
